# comfyUI-prompts

./: README.md  nodes.py  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.mts
locales/en/: main.json
locales/zh/: main.json
src/: main.ts
src/assets/: base.css  main.css
src/components/: Actor.vue  PromptListBox.vue  PromptWidget.vue  PromptsModule.vue
src/util/: index.ts
src/volt/: Listbox.vue  MultiSelect.vue  Panel.vue  Popover.vue  SelectButton.vue
web/: main.js  main.js.map
web/css/: main.css
